tests/compile-fail/integration__integration__general__unknown_instr_name.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: unknown ANM instruction or function 'iMadeThisUpYesterday'
   ┌─ <input>:27:7
   │
27 │       iMadeThisUpYesterday(0, 0, 0);  
   │       ^^^^^^^^^^^^^^^^^^^^ not found in this scope


